# HTWKMotion

./: CMakeLists.txt  README.md  ankle_balancer.cpp  ankle_balancer.h  arm_controller.cpp  arm_controller.h  kalman_filter.cpp  kalman_filter.h  odometry.h  sit_motion.cpp  sit_motion.h  walking_engine.cpp  walking_engine.h  walking_time.h
cpp17/: CMakeLists.txt  iterator_cpp17  optional
kinematics/: CMakeLists.txt  ForwardKinematic.cpp  ForwardKinematic.h  InverseKinematics.cpp  InverseKinematics.h  Joints.h  LegJoints.h  LegPosition.h  LegPositionPlain.h  Pose3D.cpp  Pose3D.h  PositionFeet.cpp  PositionFeet.h  PositionPlain.h
option_framework/: CMakeLists.txt  booloption.cpp  enumoption.cpp  floatoption.cpp  intoption.cpp  optionset.cpp  robotoption.cpp  robotoption.h
sockethelper/: CMakeLists.txt  sockethelper.cpp  sockethelper.h
utils/: CMakeLists.txt  LegPositionPlain.h  PositionPlain.h  battery.h  exponential_moving_average.h  fsr.h  imu.h  joints.h  leds.h  lola_frame.cpp  lola_frame.h  point_2d.h  point_3d.h  position.h  stl_ext.h  touch_sensors.h
